# anon_chat

./: README.md
be/: Cargo.toml
be/src/: client.rs  main.rs  message_response.rs  user_request.rs
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/app/chat/: InputReply.tsx  _layout.tsx  index.tsx
mobile/components/ui/: InputReply.tsx
mobile/interfaces/: MessageResponse.tsx
