[package]
name = "be"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.49", features=["full"]}
warp = { version = "0.4", features = ["websocket", "server"] }
futures = { version = "0.3", default-features=false}
serde = { version = "1", features=["derive"]}
serde_json = "1"
uuid = {version = "1.19", features=["v4","fast-rng"]}
tokio-stream = "0.1.18"
